WIP using dataframe for queries